Add hint text for module manipulation in HUD editor and improve comments